--- a/.gitignore
+++ b/.gitignore
@@ -354,8 +354,10 @@ MigrationBackup/
 !.vscode/launch.json
 !.vscode/extensions.json
 
+# SQLite files
 identifier.sqlite
 *.db
+*.db-*
 
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
