--- a/client-app/package.json
+++ b/client-app/package.json
@@ -9,12 +9,14 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.11",
     "@types/react": "^18.0.27",
+    "@types/react-calendar": "^3.9.0",
     "@types/react-dom": "^18.0.10",
     "axios": "^1.2.3",
     "mobx": "^6.7.0",
     "mobx-react-lite": "^3.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.4",
